Remove old tmux configuration options

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -28,8 +28,8 @@ set-option -g pane-active-border-fg green
 # set-option -g pane-border-fg colour235 #base02
 # set-option -g pane-active-border-fg colour240 #base01
 
-# utf8 support
-set-window-option -g utf8 on
+# utf8 support  - It is no longer necessary.
+# set-window-option -g utf8 on
 
 
 # basic settings
@@ -43,10 +43,14 @@ set-window-option -g window-status-current-fg magenta
 setw -g automatic-rename
 
 # use mouse # More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
-setw -g mode-mouse on
-#setw -g mouse-resize-pane on
-#set -g mouse-select-window on
-set -g mouse-select-pane on
+# So this option has been renamed in version 2.1 (18 October 2015)
+# setw -g mode-mouse on
+# setw -g mouse-resize-pane on
+# set -g mouse-select-window on
+# set -g mouse-select-pane on
+# =================================
+# Instead there is just one option:  'mouse' which turns on mouse support
+set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # vi movement keys
@@ -55,7 +59,8 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 ############################################################################
 # Status Bar
 ############################################################################
-set-option -g status-utf8 on
+# Option 'status-utf8' no longer needed since May 4, 2016
+# set-option -g status-utf8 on
 set-option -g status-justify right
 set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
@@ -172,14 +177,16 @@ bind M-r rotate-window
 
 ############################################################################
 # Prevent tmux freezing when lots of text is output
+# The c0-* options for rate-limiting have been removed.  Instead, a backoff
+#  approach is used.
 ############################################################################
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+# setw -g c0-change-trigger 10
+# setw -g c0-change-interval 250
 
 ############################################################################
 # Start with custom tabs
 ############################################################################
-new -s Vagrant -n code
+new -s Code -n code
 neww -n models
 neww -n controllers
 neww -n api
