Remove vim path, update go path, postgres path and vim config

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -28,8 +28,9 @@ set-option -g pane-active-border-fg green
 # set-option -g pane-border-fg colour235 #base02
 # set-option -g pane-active-border-fg colour240 #base01
 
-# utf8 support
-set-window-option -g utf8 on
+# utf8 support. It is no longer necessary.
+# https://github.com/tmux/tmux/issues/230
+# set-window-option -g utf8 on
 
 
 # basic settings
@@ -42,11 +43,7 @@ set-window-option -g window-status-current-fg magenta
 # Automatically set window title
 setw -g automatic-rename
 
-# use mouse # More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
-setw -g mode-mouse on
-#setw -g mouse-resize-pane on
-#set -g mouse-select-window on
-set -g mouse-select-pane on
+setw -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # vi movement keys
@@ -55,14 +52,14 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 ############################################################################
 # Status Bar
 ############################################################################
-set-option -g status-utf8 on
-set-option -g status-justify right
+set-option -g status-justify centre
 set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
-set-option -g status-interval 5
-set-option -g status-left-length 100
-set-option -g status-left '#[fg=yellow,bold]# #S » #[fg=colour231,bold]#h@#{pane_current_path}'
-set-option -g status-right '#[fg=red,bold][#[(git branch) branch]] #[fg=cyan]» #[fg=yellow]%R #[fg=magenta]%d-%m-%Y#(acpi | cut -d ',' -f 3)#[default]'
+set-option -g status-interval 2
+set-option -g status-left '#[fg=colour33,bold]# #S » #[fg=colour244,bold]#h'
+set-option -g status-left-length 60
+set-option -g status-right '#[fg=cyan]» #[fg=yellow]%R #[fg=magenta]%d-%m-%Y #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --powerline-right --graph-lines 0 --interval 2) #[default]'
+set-option -g status-right-length 90
 set-option -g visual-activity on
 
 # Titles (window number, program name, active (or not)
@@ -171,19 +168,20 @@ bind M-| select-layout "even-horizontal"
 bind M-r rotate-window
 
 ############################################################################
-# Prevent tmux freezing when lots of text is output
+# Set current pant on new window
 ############################################################################
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 ############################################################################
 # Start with custom tabs
 ############################################################################
-new -s Vagrant -n code
-neww -n models
-neww -n controllers
-neww -n api
-neww -n sql
+new -s Vagrant -n code -c "#{pane_current_path}"
+neww -n models -c "#{pane_current_path}"
+neww -n controllers -c "#{pane_current_path}"
+neww -n api -c "#{pane_current_path}"
+neww -n sql -c "#{pane_current_path}"
 
 ############################################################################
 # focus on first window
