--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -22,36 +22,31 @@ bind-key a send-prefix # for nested tmux sessions
 set-option -g history-limit 10000
 set-option -g status-position top
 # colors
-# setw -g mode-bg black
-set-option -g default-terminal  "xterm-256color" # "screen-256color"
-# set-option -g pane-active-border-fg green
+setw -g mode-bg black
+set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
+set-option -g pane-active-border-fg green
 # set-option -g pane-border-fg colour235 #base02
 # set-option -g pane-active-border-fg colour240 #base01
 
-# utf8 support. It is no longer necessary.
-# https://github.com/tmux/tmux/issues/230
-# set-window-option -g utf8 on
+# utf8 support
+set-window-option -g utf8 on
 
 
 # basic settings
 set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi # vi key
 set-window-option -g monitor-activity on
-# set-window-option -g window-status-current-fg magenta
+# set-window-option -g window-status-current-fg white
 # set-window-option -g window-status-current-bg reverse
 
 # Automatically set window title
 setw -g automatic-rename
 
 # use mouse # More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
-# So this option has been renamed in version 2.1 (18 October 2015)
 # setw -g mode-mouse on
-# setw -g mouse-resize-pane on
-# set -g mouse-select-window on
+#setw -g mouse-resize-pane on
+#set -g mouse-select-window on
 # set -g mouse-select-pane on
-# =================================
-# Instead there is just one option:  'mouse' which turns on mouse support
-set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # vi movement keys
@@ -60,16 +55,16 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 ############################################################################
 # Status Bar
 ############################################################################
-# Option 'status-utf8' no longer needed since May 4, 2016
-# set-option -g status-utf8 on
+set-option -g status-utf8 on
 set-option -g status-justify right
 set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
 set-option -g status-interval 2
-set-option -g status-left '#[fg=colour33,bold]# #S » #[fg=colour244,bold]#h'
-set-option -g status-left-length 60
-set-option -g status-right '#[fg=cyan]» #[fg=yellow]%R #[fg=magenta]%d-%m-%Y #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --powerline-right --graph-lines 0 --interval 2) #[default]'
-set-option -g status-right-length 90
+set-option -g status-left-length 50
+set-option -g status-left "#[fg=yellow,bold]# #S » "
+# set-option -g status-left "#[fg=yellow,bold]# #S » #[fg=colour231,bold]#h@#{pane_current_path}"
+set-option -g status-right-length 80
+set-option -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default] #[fg=cyan]» #[fg=yellow]%R #[fg=magenta]%d-%m-%Y#(acpi | cut -d ',' -f 3)#[default]"
 set-option -g visual-activity on
 
 # Titles (window number, program name, active (or not)
@@ -133,8 +128,8 @@ bind-key -n C-down next
 # windows
 ############################################################################
 set-window-option -g window-status-current-format "#I:#W"
-# set-window-option -g window-status-current-style fg=magenta,bold,underscore
-# set-window-option -ag window-status-current-style underscore
+set-window-option -g window-status-current-style fg=magenta,bold,underscore
+# set-window-option -ag window-status-current-style bg=blue
 set-window-option -g window-status-format "#I:#W"
 set-window-option -g window-status-separator " | "
 
@@ -177,29 +172,30 @@ bind M-- select-layout "even-vertical"
 bind M-| select-layout "even-horizontal"
 bind M-r rotate-window
 
-############################################################################
-# Set current pant on new window
-############################################################################
-# bind c new-window -c "#{pane_current_path}"
-# bind '"' split-window -c "#{pane_current_path}"
-# bind % split-window -h -c "#{pane_current_path}"
-
-# Prevent tmux freezing when lots of text is output
-# The c0-* options for rate-limiting have been removed.  Instead, a backoff
-#  approach is used.
-############################################################################
-# setw -g c0-change-trigger 10
-# setw -g c0-change-interval 250
-
-############################################################################
-# Start with custom tabs
-############################################################################
-new -s Code -n code
+new -s Harad -n code
 neww -n models
 neww -n controllers
 neww -n api
 neww -n sql
-############################################################################
+
+new -s Platzi -n code
+neww -n models
+neww -n controllers
+neww -n api
+neww -n sql
 # focus on first window
-############################################################################
+# select-window -t 0
+
+new -s Psi -n code
+neww -n models
+neww -n controllers
+neww -n api
+neww -n sql
+select-window -t 0
+
+new -s Phoenix -n code
+neww -n models
+neww -n controllers
+neww -n api
+neww -n sql
 select-window -t 0
